# JsonFusion

./: .conanignore  .gitignore  BUGS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md  annotated.hpp  comparison_parsing_benchmark.cpp  conanfile.py  cpp_json_reflection.hpp  library.json  main2.cpp  options.hpp  parser.hpp  rapidjson_comparison_parsing_benchmark.cpp  serializer.hpp  static_schema.hpp  string_ops.hpp
.github/workflows/: benchmarks.yml  constexpr_tests.yml  embedded_code_size_banchmarks.yml  embedded_code_size_benchmarks.yml  tests.yml
benchmarks/: bench_matrix.hpp  build.sh  canada_json_parsing.cpp  comparison_parsing_benchmark.cpp  main.cpp  rapidjson_populate.hpp  twitter_json_parsing.cpp  twitter_model.hpp
benchmarks/canada_json/: canada_json_parsing.cpp  canada_json_parsing.hpp  canada_json_parsing_glaze.cpp  canada_json_parsing_rapidjson.cpp
benchmarks/embedded/code_size/: .gitignore  README.md  additional_models.hpp  build.py  build.sh  embedded_config.hpp  parse_config.cpp  parse_config_arduinojson.cpp  parse_config_cbor.cpp  parse_config_cjson.cpp  parse_config_glaze.cpp  parse_config_jsmn.cpp  run_all_benchmarks.sh  update_readme.py
benchmarks/syntetic/: bench_matrix.hpp  benchmarks_jsonfusion_tu.cpp  benchmarks_jsonfusion_tu.hpp  benchmarks_models.hpp  benchmarks_rapidjson_tu.cpp  benchmarks_rapidjson_tu.hpp  main.cpp
benchmarks/twitter_json/: benchmark.hpp  glaze_parsing.hpp  rapidjson_populate.hpp  reflectcpp_parsing.hpp  twiiter_json_parsing_yyjson.cpp  twitter_json_parsing.cpp  twitter_json_parsing_glaze.cpp  twitter_json_parsing_rapidjson.cpp  twitter_json_parsing_reflectcpp.cpp  twitter_model_generic.hpp  yyjson_parsing.hpp
benchmarks/twitter_json_c_sharp/: .gitignore  Program.cs  README.md  TwitterBenchmark.csproj  TwitterModel.cs
benchmarks/twitter_json_java/: .gitignore  README.md  pom.xml
clang_emscripten_constexpr_run_tool/: CMakeLists.txt  build.sh  clang-constexpr-run.cpp  devserver.py  generate_headers_manifest.sh  headers-manifest.json  index.html  js_example.mjs  load_headers.mjs  run_constexpr_tests.mjs
docs/: ANNOTATIONS_REFERENCE.md  ERROR_HANDLING.md  FP_BACKEND_ARCHITECTURE.md  JSON_SCHEMA.md  JSON_TYPE_MAPPING.md  PLATFORMIO.md  TRANSFORMERS.md  WHY_REFLECTION.md  conan_usage.md  constexpr-tests.html  index.html  index.md  vcpkg_usage.md
docs/css/: docs.css
docs/explanation/: architecture.md
docs/how-to/: ERROR_HANDLING.md  index.md
docs/js/: compiler-engine.mjs  doc-app.mjs  live-editor.mjs
docs/reference/: index.md
docs/todo/: DOM_STRUCTURE_FOR_JSON_SINK.md
docs/tutorials/: 01-getting-started.md  02-modeling-json-types.md  03-validation-and-annotations.md  04-error-handling.md
examples/: README.md  basic_usage.cpp  embedded.cpp  external_meta.cpp  json_schema_demo.cpp  schema_evolution_bool_to_enum.cpp  size_estimator_demo.cpp  validation_example.cpp  yyjson_wiresink.cpp
examples/c_interop/: Makefile  README.md  main.c  parser.cpp  structures.h
include/JsonFusion/: annotated.hpp  cbor.hpp  cbor_reader.hpp  const_string.hpp  error_formatting.hpp  errors.hpp  fp_to_str.hpp  generic_streamer.hpp  generic_transformers.hpp  io.hpp  json.hpp  json_path.hpp  json_reader.hpp  json_schema.hpp  options.hpp  parse_errors.hpp  parse_result.hpp  parser.hpp  path.hpp  reader_concept.hpp  serialize_size_estimator.hpp  serializer.hpp  static_schema.hpp  string_search.hpp  struct_fields_helper.hpp  struct_introspection.hpp  tokenizer.hpp  validators.hpp  variant_transformer.hpp  version.hpp  wire_sink.hpp  writer_concept.hpp  yaml.hpp  yyjson.hpp  yyjson_reader.hpp
include/pfr/detail/: fields_count.hpp  unsafe_declval.hpp
packaging/: README.md
packaging/conan/example/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
scripts/: run_benchmarks.sh
tests/: FLOATING_POINT_TESTING.md  consteval_tests.cpp  sax_demo.cpp  test_model.hpp
tests/constexpr/: CHECKLIST.md  README.md  TEST_PLAN.md  run_tests.sh  test_helpers.hpp
tests/constexpr/annotations/: test_annotated_float_decimals.cpp  test_cpp26_annotations_basic.cpp
tests/constexpr/cbor/: test_cbor_indexes_as_keys.cpp  test_cbor_int_key.cpp  test_cbor_primitives.cpp  test_cbor_wiresink_roundtrip.cpp
tests/constexpr/composite/: test_cpp_default_values.cpp  test_cpp_zero_sized.cpp  test_parse_array_edge_cases.cpp  test_parse_array_nested.cpp  test_parse_array_primitives.cpp  test_parse_nested_complex.cpp  test_parse_nested_flat.cpp  test_parse_optional_edge_cases.cpp  test_parse_optional_nested.cpp  test_parse_optional_primitives.cpp  test_parse_string.cpp  test_parse_unique_ptr_nested.cpp  test_parse_unique_ptr_primitives.cpp  test_parse_vector_nested.cpp  test_parse_vector_primitives.cpp
tests/constexpr/concepts/: README_STRUCTURAL_DETECTION.md  test_annotations_propagation.cpp  test_consuming_streamer_like.cpp  test_json_parsable_value.cpp  test_json_serializable_value.cpp  test_map_stdlib_interface.cpp  test_producing_streamer_like.cpp  test_structural_detection.cpp  test_transformer_concepts.cpp
tests/constexpr/errors/: test_error_demo.cpp  test_error_json_path_arrays.cpp  test_error_json_path_depth_calculation.cpp  test_error_json_path_maps.cpp  test_error_json_path_mixed.cpp  test_error_json_path_primitives.cpp  test_error_path_annotations.cpp
tests/constexpr/fp/: test_fp_boundary_values.cpp  test_fp_difficult_cases.cpp  test_fp_exponent_extremes.cpp  test_fp_serialization_roundtrip.cpp  test_fp_subnormals.cpp
tests/constexpr/interaction/: test_c_interop.cpp
tests/constexpr/io/: README.md  test_io_iterators.cpp
tests/constexpr/json_schema/: test_json_schema_combined.cpp
tests/constexpr/json_spec/: test_json_field_order.cpp  test_json_null.cpp  test_json_numbers_format.cpp  test_json_strings_unicode.cpp  test_json_syntax_invalid.cpp  test_json_syntax_valid.cpp  test_json_whitespace.cpp
tests/fp/: main.cpp
tests/misc/: main.cpp
tests/rapidyaml/: main.cpp
wasm-v1/: clang-constexpr-run.mjs
(+61 files in other folders)
